# python-project-lvl2

./: Makefile  README.md  pyproject.toml
.github/workflows/: build & test.yml  build&test.yml
gendiff/: __init__.py  data.py  functions.py  main.py
gendiff/formaters/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: result_json
